# samwise

./: .gitignore  LICENSE  README.md
client/c/: .gitignore  Makefile.am  configure.ac  samcli
client/c/include/: samwise.h
client/c/src/: samcli.c  samwise.c
client/rb/: .gitignore  Gemfile  LICENSE.txt  README.md  Rakefile  publish.rb  samwise.gemspec
client/rb/ext/samwise/: extconf.rb  ruby_samwise.c  ruby_samwise.h
client/rb/lib/: samwise.rb
client/rb/lib/samwise/: client.rb  connection.rb  message.rb  rabbitmq.rb  version.rb
client/rb/spec/: connection_spec.rb  message_spec.rb  rabbitmq_spec.rb
poc/: README.md
poc/rabbitmq-c_pubconf/: Makefile  README.md  build.fish  rmq_pubconf-cons.c  rmq_pubconf-prod.c  util.c  util.h
poc/rabbitmq-c_pubconf-async/: msgd.c  producer.c  rabbit.c  rabbit.h
poc/rabbitmq_ack-async/: Makefile  README.md  common.h  msgd.c  msgd.h  producer.c  rabbit.c  rabbit.h
poc/rabbitmq_ack-sync/: .gitignore  util.h
rfc/: 01-protocol.1.0.txt  02-protocol.1.1.txt  03-protocol.1.2.txt
samwise/: .gitignore  AUTHORS  Doxyfile  Makefile.am  README  config.h.in  configure  configure.ac  notes
samwise/cfg/: base.cfg  base_1_broker.cfg
samwise/cfg/test/: buf.cfg  cfg_be_backends_rmq.cfg  cfg_be_interval_s.cfg  cfg_be_type_rmq.cfg  cfg_buf_file.cfg  cfg_buf_home.cfg  cfg_buf_retry_count.cfg  cfg_buf_retry_interval.cfg  cfg_buf_retry_interval_d.cfg  cfg_buf_retry_interval_h.cfg  cfg_buf_retry_interval_min.cfg  cfg_buf_retry_interval_ms.cfg  cfg_buf_retry_interval_s.cfg  cfg_buf_retry_threshold.cfg  cfg_buf_retry_threshold_d.cfg  cfg_buf_retry_threshold_h.cfg  cfg_buf_retry_threshold_min.cfg  cfg_buf_retry_threshold_ms.cfg  cfg_buf_retry_threshold_s.cfg  cfg_buf_size.cfg  cfg_buf_size_b.cfg  cfg_buf_size_g.cfg  cfg_buf_size_k.cfg  cfg_buf_size_m.cfg  cfg_endpoint.cfg  db.cfg  sam_three_brokers.cfg
samwise/include/: playground.h  sam.h  sam_be_rmq.h  sam_buf.h  sam_cfg.h  sam_db.h  sam_gen.h  sam_log.h  sam_logger.h  sam_msg.h  sam_msg_rabbitmq.h  sam_prelude.h  sam_selftest.h  sam_stat.h  samd.h
samwise/src/: playground_publish_loop.c  sam.c  sam_be_rmq.c  sam_buf.c  sam_cfg.c  sam_db_bdb.c  sam_gen.c  sam_log.c  sam_logger.c  sam_msg.c  sam_msg_rabbitmq.c  sam_selftest.c  sam_stat.c  samctl.c  samd.c
samwise/test/: sam_be_rmq_test.c  sam_buf_test.c  sam_cfg_test.c  sam_db_test.c  sam_gen_test.c  sam_log_test.c  sam_msg_test.c  sam_test.c  samd_test.c
samwise/tools/: deps.fish  release.fish  tags.fish
